<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegistroActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="110dp"
            android:layout_height="93dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_baseline_how_to_reg_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:startIconDrawable="@drawable/ic_baseline_assignment_ind_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nombreregistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombregistro" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:startIconDrawable="@drawable/ic_baseline_assignment_ind_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/apellidoregistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellidoregistro" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            app:startIconDrawable="@drawable/ic_baseline_alternate_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailregistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailregistro" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout6"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
            app:startIconDrawable="@drawable/ic_baseline_phone_iphone_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/celularregistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/celularregistro" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout7"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usuarioregistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuarioregistro" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout8"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordregistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordregistro"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout9"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout8"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordrep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordrep"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnregistrarusuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/valbtnregusuario"
            app:icon="@drawable/ic_baseline_check_24"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout9" />

        <Button
            android:id="@+id/btnirlogin"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/valbtnirlogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnregistrarusuario" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

